#35 [fix] for문 대신 stream, map 사용